--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/home">MARIO BROSS</a>
+          <a class="nav-link active" aria-current="page" href="/home">DOCUMENTATION</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/crud">CRUD EMPRESA</a>
